<resources>
    <string name="app_name">ProjectUTS</string>
    <string name="binus">BINUS</string>
    <string name="ezyfoody">EzyFoody</string>
    <string name="what_are_you_craving_right_now">What are you craving right now?</string>
    <string name="drinks">Drinks</string>
    <string name="snacks">Snacks</string>
    <string name="food">Foods</string>
    <string name="topup">Top Up</string>
    <string name="myorderHeader">MyOrder</string>
    <string name="pay_now">Pay Now</string>
    <string name="total"> Total : Rp </string>
    <string name="delete">Delete</string>
    <string name="orderHeader">Order</string>
    <string name="order_more">Order More</string>
    <string name="quantity">Quantity</string>
    <string name="orderCompleted">Order Completed!</string>
    <string name="orderCompletedQuote">Your order is completed! Thank You</string>
</resources>