<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@drawable/bguniversal"
    tools:context=".MainActivity">

    <!--lingkaran hitam-->
    <View
        android:id="@+id/ellipse_1"
        android:layout_width="506dp"
        android:layout_height="266dp"

        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="-100dp"
        android:layout_marginTop="-94dp"
        android:layout_marginRight="-100dp"
        android:background="@drawable/ellipsheader1" />

    <!--header binus-->
    <TextView
        android:id="@+id/binus"
        android:layout_width="200dp"
        android:layout_height="87dp"

        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="2dp"
        android:text="@string/binus"
        android:textAppearance="@style/binus"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        />

    <!--ez foody-->
    <TextView
        android:id="@+id/ezyfoody"
        android:layout_width="216dp"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"

        android:layout_centerInParent="true"
        android:layout_marginTop="70dp"
        android:gravity="top"
        android:text="@string/ezyfoody"
        android:textAppearance="@style/ezyfoody" />

    <!--  wat ar yu craving text-->
    <TextView
        android:id="@+id/quoteTxt"

        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"

        android:layout_centerInParent="true"
        android:layout_marginTop="200dp"

        android:text="@string/what_are_you_craving_right_now"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="italic"
        tools:ignore="TextContrastCheck" />

    <!--grid btns-->
    <androidx.gridlayout.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="450dp"

        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="300dp"
        app:alignmentMode="alignBounds"
        app:columnCount="2"
        app:rowCount="2">

        <Button
            android:id="@+id/drinkBtn"
            android:layout_width="166dp"
            android:layout_height="166dp"
            android:layout_margin="10dp"

            android:background="@drawable/buttonbg"
            android:text="@string/drinks"
            android:textAppearance="@style/contentstyles"

            android:drawableTop="@drawable/iced_coffee_48px"
            android:padding="25dp"
            android:drawableTint="#2E2C2F"

            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/snackBtn"
            android:layout_width="166dp"
            android:layout_height="166dp"
            android:layout_margin="10dp"

            android:background="@drawable/buttonbg"
            android:text="@string/snacks"
            android:textAppearance="@style/contentstyles"

            android:drawableTop="@drawable/burger_48px"
            android:padding="25dp"
            android:drawableTint="#2E2C2F"

            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/foodBtn"
            android:layout_width="166dp"
            android:layout_height="166dp"
            android:layout_margin="10dp"

            android:background="@drawable/buttonbg"
            android:text="@string/food"
            android:textAppearance="@style/contentstyles"

            android:drawableTop="@drawable/nasi_48px"
            android:padding="25dp"
            android:drawableTint="#2E2C2F"

            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/topupBtn"
            android:layout_width="166dp"
            android:layout_height="166dp"
            android:layout_margin="10dp"

            android:background="@drawable/buttonbg"
            android:text="@string/topup"
            android:textAppearance="@style/contentstyles"

            android:drawableTop="@drawable/topup_48px"
            android:padding="25dp"
            android:drawableTint="#2E2C2F"

            app:layout_column="1"
            app:layout_row="1" />

    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/shoppingbag"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"

        android:drawableStart="@drawable/shopping_basket_96px"
        android:padding="12dp"
        android:drawableTint="#F09942"

        android:background="@drawable/order_button"
        />

</RelativeLayout>