<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@drawable/bguniversal"
    tools:context=".MainActivity">

    <!--lingkaran hitam-->
    <View
        android:id="@+id/ellipse_1"
        android:layout_width="506dp"
        android:layout_height="266dp"

        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-100dp"
        android:layout_marginRight="-100dp"
        android:layout_marginTop="-94dp"
        android:background="@drawable/ellipsheader1" />

    <!--header binus-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/binus"
            android:paddingEnd="10sp"
            android:textAppearance="@style/binus1"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            />

        <!--ez foody-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ezyfoody"
            android:textAppearance="@style/ezyfoody1"
            android:gravity="top"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/snackState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"

        android:text="@string/snacks"
        android:textAppearance="@style/categoryheadertext"
        android:textStyle="bold"
        android:gravity="top"
        />

    <!--grid btns-->
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_below="@id/ellipse_1"

        android:id="@+id/snacksRecyclerView"
        />
</RelativeLayout>