<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@drawable/bguniversal"
    tools:context=".MainActivity">

    <!--lingkaran hitam-->
    <View
        android:id="@+id/ellipse_1"
        android:layout_width="506dp"
        android:layout_height="266dp"

        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-100dp"
        android:layout_marginRight="-100dp"
        android:layout_marginTop="-124dp"
        android:background="@drawable/ellipsheader1" />

    <!--header binus-->

    <TextView
        android:id="@+id/foodState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"

        android:text="@string/myorderHeader"
        android:textAppearance="@style/categoryheadertext"
        android:textStyle="bold"
        android:gravity="top"
        />

    <RelativeLayout
        android:id="@+id/toppingOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ellipse_1"

        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        >
        <TextView
            android:id="@+id/totalCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"

            android:background="@drawable/total_cost_frame"
            android:text="@string/total"
            android:textAppearance="@style/totalCost"
            />

        <Button
            android:id="@+id/payNowBtn"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"

            android:background="@drawable/pay_now_btn"
            android:drawableTop="@drawable/paper_money_48px"
            android:drawableTint="#F09942"
            android:padding="10dp"

            android:text="@string/pay_now"
            android:textAppearance="@style/payNowBtn"
            />
    </RelativeLayout>


    <!--grid btns-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myOrderRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="10dp"

        android:layout_below="@id/toppingOrder" />



</RelativeLayout>