<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@drawable/bguniversal"
    tools:context=".MainActivity">

    <!--lingkaran hitam-->
    <View
        android:id="@+id/ellipse_1"
        android:layout_width="506dp"
        android:layout_height="266dp"

        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-100dp"
        android:layout_marginRight="-100dp"
        android:layout_marginTop="-124dp"
        android:background="@drawable/ellipsheader1" />

    <!--header binus-->
    <LinearLayout
        android:id="@+id/headerCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
    >
        <TextView
            android:id="@+id/orderComplete"
            android:layout_width="300dp"
            android:layout_height="wrap_content"

            android:text="@string/orderCompleted"
            android:textAppearance="@style/categoryheadertext"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="40sp"
            />

        <TextView
            android:id="@+id/orderCompleteQuote"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"

            android:text="@string/orderCompletedQuote"

            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textColor="#000000"
            android:textStyle="italic"
            android:textSize="24sp"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/toppingOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerCompleted"

        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        >
        <TextView
            android:id="@+id/totalCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"

            android:background="@drawable/total_cost_frame"
            android:text="@string/total"
            android:textAppearance="@style/totalCost"
            />
    </RelativeLayout>


    <!--linear list-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myOrderRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="10dp"

        android:layout_below="@id/toppingOrder" />

    <Button
        android:id="@+id/goHomeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"

        android:background="@drawable/order_more_btn"

        android:text="Order Again"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="#F09942"
        />

</RelativeLayout>