<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@drawable/bguniversal"
    tools:context=".MainActivity">

    <!--lingkaran hitam-->
    <View
        android:id="@+id/ellipse_1"
        android:layout_width="506dp"
        android:layout_height="266dp"

        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="-100dp"
        android:layout_marginRight="-100dp"
        android:layout_marginTop="-124dp"
        android:background="@drawable/ellipsheader1" />

    <!--header binus-->

    <TextView
        android:id="@+id/foodState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"

        android:text="@string/orderHeader"
        android:textAppearance="@style/categoryheadertext"
        android:textStyle="bold"
        android:gravity="top"
        />

    <RelativeLayout
        android:id="@+id/toppingOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ellipse_1"

        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        >

        <TextView
            android:id="@+id/OrderItemName"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"

            android:textSize="24sp"
            android:textColor="#2E2C2F"
            android:textStyle="bold"
            android:fontFamily="sans-serif"

            />

        <TextView
            android:id="@+id/OrderItemPrice"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@id/OrderItemName"
            android:layout_alignParentStart="true"

            android:fontFamily="sans-serif"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/orderQty"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="25dp"
            android:hint="@string/quantity"

            android:textSize="24sp"
            android:textColor="#ffffff"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            />

        <Button
            android:id="@+id/OrderMoreBtn"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:layout_marginTop="100dp"
            android:layout_below="@id/OrderItemPrice"
            android:layout_alignParentEnd="true"
            android:text="@string/order_more"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textSize="24sp"
            android:background="@drawable/order_more_btn"
            />


    </RelativeLayout>

    <Button
        android:id="@+id/shoppingbag"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"

        android:background="@drawable/order_button"
        android:drawableStart="@drawable/shopping_basket_48px"
        android:drawableTint="#F09942"

        android:padding="14dp" />
</RelativeLayout>